--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://127.0.0.1:8000",
+  "proxy": "https://stingray-app-hru5d.ondigitalocean.app/",
   "name": "ui",
   "version": "0.1.0",
   "private": true,
